<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageButton
            android:id="@+id/menuClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_close"
            android:background="#00000000"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/homeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/ceritaDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerita_daerah"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/kesenianDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kesenian_daerah"
            android:layout_margin="5dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/adatDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adat_istiadat"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tanyaDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanya_bunesia"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/quizDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/quiz_bunesia"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>
    </LinearLayout>

</FrameLayout>
