<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bunesia.MainActivity"
    android:background="#123444">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTop">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:background="#00000000"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:layout_marginTop="-2dp"
            android:id="@+id/headerQuiz"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:padding="20dp"
            android:src="@drawable/logocircle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selamat"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/namaQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/scoreQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berhasil"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_margin="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_pertanyaan"
            android:orientation="horizontal">

            <Button
                android:background="@drawable/button_round_yellow"
                android:id="@+id/bt_tanya"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/jawaban"/>
            <Button
                android:background="@drawable/button_round_yellow"
                android:id="@+id/bt_listqna"
                android:layout_margin="10dp"
                android:layout_below="@+id/bt_tanya"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/leaderBoard"/>
        </LinearLayout>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>

