<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bunesia.MainActivity"
    android:background="#123444">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTop">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/btnBackQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:background="#00000000"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_bunesia"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"/>
                    <ImageButton
                        android:id="@+id/btnMenuQuiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu"
                        android:background="#00000000"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:layout_marginTop="-2dp"
            android:id="@+id/headerQuiz"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            android:src="@drawable/quiz_bu_nesia_banner_01x"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descQuiz"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_margin="25dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/namaQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerQuiz"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/nama"
            android:textColor="#fff"/>
        <Button
            android:id="@+id/btnMulaiQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/button_round_yellow"
            android:text="@string/mulai"/>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
