<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bunesia.MainActivity"
    android:background="#123444">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTop">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/btnBackTanya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:background="#00000000"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tanya_bunesia"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"/>
                    <ImageButton
                        android:id="@+id/btnMenuTanya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu"
                        android:background="#00000000"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


        <ImageView
            android:id="@+id/headerTanya"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_below="@+id/toolbarTop"
            android:layout_marginTop="-2dp"
            android:scaleType="fitXY"
            android:src="@drawable/tanya_bu_nesia_banner_01x" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_below="@+id/headerTanya"
            android:id="@+id/tv_nama_penanya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="#fff"/>
        <EditText
            android:textColor="#fff"
            android:id="@+id/et_nama_penanya"
            android:layout_below="@+id/tv_nama_penanya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/nama"/>
        <TextView
            android:layout_below="@+id/et_nama_penanya"
            android:id="@+id/tv_pertanyaan_penanya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pertanyaan"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="#fff"/>
        <EditText
            android:textColor="#fff"
            android:id="@+id/et_pertanyaan"
            android:layout_below="@+id/tv_pertanyaan_penanya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/pertanyaan"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_pertanyaan"
            android:orientation="horizontal">

        <Button
            android:background="@drawable/button_round_white"
            android:id="@+id/bt_tanya"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tanya_bunesia"/>
        <Button
            android:background="@drawable/button_round_yellow"
            android:id="@+id/bt_listqna"
            android:layout_margin="10dp"
            android:layout_below="@+id/bt_tanya"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/listqna"/>
        </LinearLayout>

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
