<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bunesia.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTop">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/backKesenian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:background="#00000000"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lagu_daerah"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"/>
                    <ImageButton
                        android:id="@+id/menuKesenian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu"
                        android:background="#00000000"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:layout_marginTop="-2dp"
            android:id="@+id/headerKesenian"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/kesenian_daerah_banner_01x"
            android:layout_below="@+id/toolbarTop"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:id="@+id/linearKesenian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerKesenian"
            android:orientation="horizontal"
            android:padding="10dp">
            <LinearLayout
                android:id="@+id/keAlat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/kesenian_daerah_01"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alat_musik" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/keLagu"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/kesenian_daerah_01"/>

                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lagu_daerah" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/keTari"
            android:layout_below="@id/linearKesenian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/kesenian_daerah_01"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tari_tradisional"/>
        </LinearLayout>

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
